fixed the scrolling issue that was happening when I added back the overflow-x hidden

--- a/assets/styles/_climatefeedback.scss
+++ b/assets/styles/_climatefeedback.scss
@@ -2,7 +2,7 @@
 
 @import url(http://fonts.googleapis.com/css?family=Raleway:500,400,300,800,700);
 
-html, body, p {
+html, body {
   font-family: 'Raleway', sans-serif;
   font-size: 16px;
   overflow-x: hidden;
